[project]
name = "btc-5m-supply-demand"
version = "0.1.0"
description = "BTC/USD 3-Step Price Action (Supply/Demand) on Coinbase (paper trading)"
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "anthropic>=0.25.0",
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hermes_trading", "hermes_trading.adapters"]
